--- a/index.html
+++ b/index.html
@@ -6,23 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
-      background-color: black;
-      color: white;
+      background-color: white;
+      color: black;
       font-family: "Times New Roman", Times, serif;
       text-align: center;
       margin: 0;
       padding: 20px;
     }
     a {
-      color: white;
+      color: black;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
-    .title {
-      font-size: 36px;
-      font-weight: bold;
+    .logo {
       margin: 40px 0 20px;
     }
     .headline {
@@ -40,7 +38,7 @@
     }
     hr {
       border: 0;
-      border-top: 1px solid #444;
+      border-top: 1px solid #aaa;
       margin: 40px auto;
       width: 80%;
     }
@@ -48,7 +46,9 @@
 </head>
 <body>
 
-  <div class="title">HONEYBADGER.NEWS</div>
+  <div class="logo">
+    <img src="HONEYBADGER.NEWS.png" alt="HONEYBADGER.NEWS" style="max-width: 90%; height: auto;">
+  </div>
 
   <div class="headline"><a href="#">BREAKING: Honey Badger Doesn’t Care About Fiat</a></div>
 
@@ -80,3 +80,4 @@
 
 </body>
 </html>
+
