--- a/index.html
+++ b/index.html
@@ -11,73 +11,105 @@
       font-family: "Times New Roman", Times, serif;
       text-align: center;
       margin: 0;
-      padding: 20px;
+      padding: 0;
     }
-    a {
+    img.logo {
+      max-width: 90%;
+      height: auto;
+      margin-top: 40px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 40px;
+      padding: 40px 10%;
+    }
+    .column {
+      text-align: left;
+    }
+    .column h2 {
+      text-align: center;
+      font-size: 20px;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 5px;
+    }
+    .feed-item {
+      margin: 10px 0;
+    }
+    .feed-item a {
       color: black;
       text-decoration: none;
     }
-    a:hover {
+    .feed-item a:hover {
       text-decoration: underline;
     }
-    .logo {
-      margin: 40px 0 20px;
+    .cta {
+      text-align: center;
+      margin: 60px 0 40px;
+      font-size: 18px;
     }
-    .headline {
-      font-size: 24px;
+    .cta a {
+      color: orange;
+      text-decoration: none;
       font-weight: bold;
-      margin: 30px 0 10px;
     }
-    .section {
-      margin: 40px 0;
+    .cta a:hover {
+      text-decoration: underline;
     }
-    .link {
-      display: block;
-      font-size: 16px;
-      margin: 10px 0;
-    }
-    hr {
-      border: 0;
-      border-top: 1px solid #aaa;
-      margin: 40px auto;
-      width: 80%;
+    @media screen and (max-width: 768px) {
+      .grid {
+        grid-template-columns: 1fr;
+        padding: 20px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <div class="logo">
-    <img src="HONEYBADGER.NEWS.png" alt="HONEYBADGER.NEWS" style="max-width: 90%; height: auto;">
+  <!-- Logo Header -->
+  <img src="HONEYBADGER.NEWS.png" alt="HONEYBADGER.NEWS" class="logo">
+
+  <!-- Two Column RSS Layout -->
+  <div class="grid">
+    <div class="column" id="bitcoin-feed">
+      <h2>Bitcoin</h2>
+      <!-- Bitcoin RSS content will load here -->
+    </div>
+    <div class="column" id="macro-feed">
+      <h2>Macro</h2>
+      <!-- Macro RSS content will load here -->
+    </div>
   </div>
 
-  <div class="headline"><a href="#">BREAKING: Honey Badger Doesn’t Care About Fiat</a></div>
-
-  <div class="section">
-    <a class="link" href="#">🇸🇻 El Salvador Expands Bitcoin Bonds</a>
-    <a class="link" href="#">🪙 Lightning Network Surges in Volume</a>
-    <a class="link" href="#">🏦 Central Bankers Still Don’t Get It</a>
-    <a class="link" href="#">💥 CBDCs Face Global Pushback</a>
+  <!-- Donate CTA -->
+  <div class="cta">
+    <a href="LIGHTNING-INVOICE-OR-QR-LINK-HERE" target="_blank">⚡Donate to keep Honeybadger alive</a>
   </div>
 
-  <hr>
+  <!-- RSS Feed Loader -->
+  <script>
+    // Helper: Load RSS to target column
+    async function loadRSS(feedUrl, containerId) {
+      const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(feedUrl)}`);
+      const data = await response.json();
+      const container = document.getElementById(containerId);
+      data.items.slice(0, 10).forEach(item => {
+        const div = document.createElement("div");
+        div.className = "feed-item";
+        div.innerHTML = `<a href="${item.link}" target="_blank">${item.title}</a>`;
+        container.appendChild(div);
+      });
+    }
 
-  <div class="section">
-    <a class="link" href="#">🏛️ Politics</a>
-    <a class="link" href="#">🌍 World</a>
-    <a class="link" href="#">📈 Markets</a>
-    <a class="link" href="#">⚙️ Tech</a>
-    <a class="link" href="#">⛏️ Mining</a>
-    <a class="link" href="#">💡 Education</a>
-  </div>
-
-  <hr>
-
-  <div class="section">
-    <a class="link" href="#">🔥 FEATURED: How Bitcoin Frees Nations</a>
-    <a class="link" href="#">🎧 Listen to the Latest Podcast</a>
-    <a class="link" href="#">📩 Contact / Submit a Story</a>
-  </div>
+    // Bitcoin sources
+    loadRSS("https://bitcoinmagazine.com/.rss/full", "bitcoin-feed");
+    // Macro sources
+    loadRSS("https://www.zerohedge.com/rss.xml", "macro-feed");
+  </script>
 
 </body>
 </html>
+
 
