--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       font-size: 18px;
     }
     .cta a {
-      color: black;
+      color: #f7931a;
       text-decoration: none;
       font-weight: bold;
     }
