--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       background-color: white;
       color: black;
-      font-family: "Times New Roman", Times, serif;
+      font-family: "Anonymous Pro", Regular, Bold;
       text-align: center;
       margin: 0;
       padding: 0;
