--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <title>HONEYBADGER.NEWS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: white;
       color: black;
-      font-family: "Anonymous Pro", Regular, Bold;
+      font-family: "Anonymous Pro", monospace;
       text-align: center;
       margin: 0;
       padding: 0;
