--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       background-color: white;
       color: black;
-      font-family: "Anonymous Pro", monospace;
+      font-family: 'Anonymous Pro', monospace;
       text-align: center;
       margin: 0;
       padding: 0;
@@ -76,41 +76,39 @@
   <div class="grid">
     <div class="column" id="bitcoin-feed">
       <h2>Bitcoin</h2>
-      <!-- Bitcoin RSS content will load here -->
     </div>
     <div class="column" id="macro-feed">
       <h2>Macro</h2>
-      <!-- Macro RSS content will load here -->
     </div>
   </div>
 
   <!-- Donate CTA -->
   <div class="cta">
-    <a href="LIGHTNING-INVOICE-OR-QR-LINK-HERE" target="_blank">⚡ Donate to keep Honeybadger alive</a>
+    <a href="https://example.com/lightning-invoice" target="_blank">⚡Donate to keep Honeybadger alive</a>
   </div>
 
   <!-- RSS Feed Loader -->
   <script>
-    // Helper: Load RSS to target column
     async function loadRSS(feedUrl, containerId) {
-      const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(feedUrl)}`);
-      const data = await response.json();
-      const container = document.getElementById(containerId);
-      data.items.slice(0, 10).forEach(item => {
-        const div = document.createElement("div");
-        div.className = "feed-item";
-        div.innerHTML = `<a href="${item.link}" target="_blank">${item.title}</a>`;
-        container.appendChild(div);
-      });
+      try {
+        const res = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(feedUrl)}`);
+        const data = await res.json();
+        const container = document.getElementById(containerId);
+        data.items.slice(0, 10).forEach(item => {
+          const div = document.createElement("div");
+          div.className = "feed-item";
+          div.innerHTML = `<a href="${item.link}" target="_blank">${item.title}</a>`;
+          container.appendChild(div);
+        });
+      } catch (err) {
+        document.getElementById(containerId).innerHTML = "<p>⚠️ Failed to load feed.</p>";
+      }
     }
 
-    // Bitcoin sources
-    loadRSS("https://bitcoinmagazine.com/.rss/full", "bitcoin-feed");
-    // Macro sources
+    // Load feeds
+    loadRSS("https://stacker.news/rss", "bitcoin-feed");
     loadRSS("https://www.zerohedge.com/rss.xml", "macro-feed");
   </script>
 
 </body>
 </html>
-
-
