--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     }
 
     // Load feeds
-    loadRSS("https://stacker.news/rss", "bitcoin-feed");
+    loadRSS("https://stacker.news/~news/rss", "bitcoin-feed");
     loadRSS("https://www.zerohedge.com/rss.xml", "macro-feed");
   </script>
 
