--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
   <!-- Two Column RSS Layout -->
   <div class="grid">
     <div class="column" id="bitcoin-feed">
-      <h2>**BITCOIN**</h2>
+      <h2>BITCOIN</h2>
     </div>
     <div class="column" id="macro-feed">
-      <h2>**MACRO**</h2>
+      <h2>MACRO</h2>
     </div>
   </div>
 
