--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     // Load feeds
     loadRSS("https://stacker.news/~news/rss", "bitcoin-feed");
-    loadRSS("https://www.zerohedge.com/rss.xml", "macro-feed");
+    loadRSS("https://rss.app/feeds/ZRxhZhQHO6vfBKeL.xml", "macro-feed");
   </script>
 
 </body>
